@@ -30,5 +30,6 @@ Bogdan Pintea
 Gerfried Fuchs
 Stanislas Rouvelin
 Sami Kerola
+Kristian Lyngstol
 
 $Id$
